examples/kju/positive/arythmetic/addition_example.kju
fun kju():Unit{
	var x:Int=2+2;
}