examples/kju/negative/arrays/assign_to_alloc.kju
fun kju(): Unit {
    new(Int, 10) = new(Int, 10);
}
